# 2DMAT

./: .gitignore  README.md  index.html  pyproject.toml
.github/workflows/: build_docs.yml  deploy_docs.yml  deploy_pypi.yml  main.yml  requirements_latest.txt  requirements_minimum.txt
doc/en/: Makefile
extra/function/: README.md  pyproject.toml
extra/leed/: README.md  pyproject.toml
extra/leed/doc/en/source/: acknowledgement.rst  conf.py  contact.rst  install.rst  introduction.rst  solver.rst
extra/leed/doc/en/source/tutorial/: index.rst  mapper.rst  user_program.rst
extra/leed/doc/ja/source/: acknowledgement.rst  conf.py  contact.rst  index.rst  install.rst  introduction.rst  solver.rst
extra/leed/doc/ja/source/tutorial/: index.rst  mapper.rst  user_program.rst
extra/leed/sample/mapper/: MeshData.txt  do.sh  input.toml  leedsatl.patch  make_meshdata.py  plot_colormap_2d.py  prepare.sh  ref_ColorMap.txt  setup.sh
extra/leed/sample/user_program/: do.sh  input.toml  ref.txt  simple.py  simple2.py
extra/leed/sample/user_program/base/: exp.d  tleed4.i  tleed5.i
extra/leed/src/: main.py
extra/leed/src/leed/: __init__.py  _main.py  input.py  leed.py  parameter.py
extra/leed/tests/mapper/: do.sh  input.toml  ref_ColorMap.txt
extra/leed/tests/mapper/base/: exp.d  rfac.d  short.t  tleed5.i
extra/sim-trhepd-rheed/: README.md  pyproject.toml
extra/sxrd/: README.md  pyproject.toml
sample/analytical/: plot_himmel.py
sample/py2dmat/: plot_himmel.py
sample/sim-trhepd-rheed/: surf.txt
sample/sxrd/: sic111-r3xr3.blk
sample/user_function/: simple.py
script/: draw_RC_double.py  draw_RC_single.py  make_convolution.py  plot_bulkP.py  separateT.py
src/: py2dmat_main.py  py2dmat_neighborlist.py
src/2dmat/: 2dmat.py  Solver_Surface.py  main.py  mapper_mpi.py  minsearch.py
src/RHEED/: Makefile.lapack  U0.f90  asf.f90  bulkio.f90  bulkm.f90  bulkm_org.f90  domain.f90  domainsum.f90  fd.bat  fs.bat  fx.bat  gcmi.f90  nosurf.txt  (+9 more)
(+1268 files in other folders)
