[tool.poetry]
name = "py2dmat"
version = "2.0.0"
description = "Data-analysis software of quantum beam diffraction experiments for 2D material structure"
authors = ["2DMAT developers <2dmat-dev@issp.u-tokyo.ac.jp>"]
license = "GPL-3.0-or-later"

readme = "README.md"
repository = "https://github.com/issp-center-dev/2DMAT"

packages = [
  { include = "py2dmat", from = "src" }
  ]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.14"
tomli = "^1"
scipy = {version = "^1", optional = true}
mpi4py = {version = "^3", optional = true}
physbo = {version = ">= 1.0.0", optional = true}

[tool.poetry.extras]
min_search = ["scipy"]
bayes = ["physbo"]
exchange = ["mpi4py"]
all = ["scipy", "mpi4py", "physbo"]

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
py2dmat = "py2dmat:main"
py2dmat_neighborlist = "py2dmat.util.neighborlist:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
